# TEtrimmer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Class_Define_boundary.py  Class_MSA_plot.py  Class_TE_aid.py  Class_bed_filter.py  Class_blast_extension_mafft.py  Class_check_TGT_ACA.py  Class_crop_end.py  Class_elongate_query.py  Class_group_MSA.py  Class_move_files.py  Class_orf_and_domain_plot.py  Function_def_boundary_and_crop.py  LICENSE  MANIFEST.in  README.md  TETrimmer_dependencies  TETrimmer_env_for_linux.yml  TETrimmer_env_for_macOS.yml  TE_Trimmer_dependencies  TE_Trimmer_env_for_linux.yml  TEtrimmer_env_for_linux.yml  USAGE.md  Update_history  env-osx64-linux.yml  env-osx64.yml  environment.yml  main.py  meta.yaml  package-list.txt  pyproject.toml  pytest.ini  setup.py  tetrimmerenv.yml
conda.recipe/: meta.yaml
docs/: TEtrimmer_dependencies  TEtrimmer_env_for_linux.yml  TEtrimmer_env_for_macOS.yml
old_file/: Class_TE_div_from_repeatmasker.py  Class_TKinter_proof_annotation.py  Class_pfam_scan_and_plot.py  Class_repeatmasker.py  Class_select_ditinct_columns.py  Class_separate_fasta.py  Function_clean_and_clauster_MSA.py
src/TEtrimmer/tetrimmer/: MSAcluster.py  SeparateLTR.py  TE_sankey_plotter.py  (+12 more)
tests/: test_genome.fa.ndb  test_genome.fa.nin  test_genome.fa.njs  test_genome.fasta.fai  test_genome.fasta.ndb  test_genome.fasta.nhr  test_genome.fasta.nin  test_genome.fasta.njs  test_genome.fasta.nsq  test_input.fa
tests/data/: test_genome.fa.length  test_genome.fa.nin  test_genome.fa.njs  test_input.fa  test_single_input.fa
tetrimmer/: MSAcluster.py  SeparateLTR.py  TETrimmer.py  TE_anno_benchmarker.py  TE_sankey_plotter.py  TEaid.py  TEtrimmer.py  __init__.py  _version.py  analyze.py  blast_and_orfs_to_database.py  boundaryclass.py  boundarycrop.py  cialign.py  config.json  find_missing_rmf.py  functions.py  name.py  orfdomain.py  parallel_pipe.py  parallel_pipe_old.py  pyhmmer_manager.py  pyhmmer_manager_old.py  separateLTR.py  seqclass.py  simulate_line_tsds.py  test.py
tetrimmer/TE-Aid-master/: .gitignore  Run-c2g.R  TE-Aid  blastndotplot.R  consensus2genome.R  getlength.sh
tetrimmer/TETrimmer_proof_anno_GUI/: annoGUI.py  crop_end_gap.py  remove_gap.py
tetrimmer/TEtrimmer_proof_anno_GUI/: Plotter.py  TEtrimmerGUI.py  annoGUI.py  crop_end_divergence.py  crop_end_gap.py  remove_gap.py
tetrimmerGUI/: GUI_functions.py  Plotter.py  RefBeet-3.0.fa.length  TEAid_plotter.py  TE_landscape_plotter.py  TEtrimmerGUI.py  TSD_search.py  cialign_plot.py  crop_end_divergence.py  remove_gap.py  zxm.fa.length
tetrimmerGUI/temp_TEtrimmer_clustered/: LTRRT_1328#LTR__Copia.fa_cons.fa  LTRRT_1328#LTR__Copia.fa_cons.fa_no_header.b  LTRRT_1328#LTR__Copia.fa_cons.fa_no_header.b_TEAid.b  rnd_1_family_188#LTR__Gypsy.raw.fa_Col.fa_Gap.bed  rnd_1_family_188#LTR__Gypsy.raw.fa_Col.fa_Gap_1000_1000.bed  rnd_1_family_188.fasta.b.bed_uf.bed_g_1.bed_fm_1.bed_0_0_bcln.fa_aln.fa_cl.fa_gs.fa.fa_cons.fa  rnd_1_family_188.fasta.b.bed_uf.bed_g_1.bed_fm_1.bed_0_0_bcln.fa_aln.fa_cl.fa_gs.fa.fa_cons.fa_no_header.b  rnd_1_family_188.fasta.b.bed_uf.bed_g_1.bed_fm_1.bed_0_0_bcln.fa_aln.fa_cl.fa_gs.fa.fa_cons.fa_no_header.b_TEAid.b  rnd_1_family_470#Unknown.fa_0.3_co.fa  rnd_1_family_470#Unknown.fa_0.3_co.fa_no_header.b  rnd_1_family_470#Unknown.fa_0.3_co.fa_no_header.b_TEAid.b  rnd_1_family_470#Unknown.fa_0.3_co.fa_pcc.txt  rnd_1_family_667#Unknown.fa_0.3_co.fa  rnd_1_family_667#Unknown.fa_0.3_co.fa_no_header.b  rnd_1_family_667#Unknown.fa_0.3_co.fa_no_header.b_TEAid.b  rnd_1_family_667#Unknown.fa_Div.fa_Gap.fa_Div.fa_cons.fa  rnd_1_family_667#Unknown.fa_Div.fa_Gap.fa_Div.fa_cons.fa_no_header.b  rnd_1_family_667#Unknown.fa_Div.fa_Gap.fa_Div.fa_cons.fa_no_header.b_TEAid.b  rnd_5_family_182#Unknown.fa_0.3_co.fa  rnd_5_family_182#Unknown.fa_0.3_co.fa_no_header.b  rnd_5_family_182#Unknown.fa_0.3_co.fa_no_header.b_TEAid.b  rnd_5_family_182#Unknown.raw.fa_0.3_co.fa  rnd_5_family_182#Unknown.raw.fa_0.3_co.fa_no_header.b  rnd_5_family_182#Unknown.raw.fa_0.3_co.fa_no_header.b_TEAid.b  rnd_5_family_182#Unknown.raw.fa_0.3_co.fa_pcc.txt  rnd_6_family_2561.fasta.b.bed_uf.bed_g_1.bed_fm_1.bed_0_0_bcln.fa_aln.fa_cl.fa_gs.fa.fa_cons.fa  rnd_6_family_2561.fasta.b.bed_uf.bed_g_1.bed_fm_1.bed_0_0_bcln.fa_aln.fa_cl.fa_gs.fa.fa_cons.fa_no_header.b  rnd_6_family_2561.fasta.b.bed_uf.bed_g_1.bed_fm_1.bed_0_0_bcln.fa_aln.fa_cl.fa_gs.fa.fa_cons.fa_no_header.b_TEAid.b
tetrimmerGUI/temp_consensus_lib/: rnd-6_family-2561#Unknown.fa_no_header.b  rnd-6_family-2561#Unknown.fa_no_header.b.bed_f.bed
tetrimmerGUI/temp_folder/: rnd-1_family-188#LTR__Gypsy.fa_cons.fa  rnd-1_family-188#LTR__Gypsy.fa_cons.fa_no_header.b  rnd-1_family-188#LTR__Gypsy.fa_cons.fa_no_header.b_TEAid.b  rnd-1_family-188#LTR__Gypsy.fa_cons.fa_pcc.txt  rnd-1_family-587#LTR__Copia.fa_cons.fa  rnd-1_family-587#LTR__Copia.fa_cons.fa_no_header.b  rnd-1_family-587#LTR__Copia.fa_cons.fa_no_header.b_TEAid.b  rnd-1_family-587#LTR__Copia.fa_cons.fa_pcc.txt
(+107 files in other folders)
