# Build system configuration
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Project metadata
[project]
name = "TEtrimmer"
description = "TETrimmer is designed to replace and assist TE manual curation."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL3" }
authors = [
    { name = "Jiangzhao Qian" }
]

# Classifiers for project categorization
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]

# Project dependencies
dependencies = ["biopython>=1.70", "click", "dataclasses", "dill", "ghostscript", "joblib",
"matplotlib", "multiprocess", "numpy", "pandas", "plotly", "pypdf2", "regex", "requests", "scikit-learn", "tk", "urllib3"
]

# Dynamic versioning
dynamic = ["version"]

# Project URLs
[project.urls]
homepage = "https://github.com/qjiangzhao/TEtrimmer"
documentation = "https://github.com/qjiangzhao/TEtrimmer"
repository = "https://github.com/qjiangzhao/TEtrimmer"

# Command-line script entry point
[project.scripts]
TEtrimmer="TEtrimmer.tetrimmer.TEtrimmer:main"
TEtrimmerGUI="TEtrimmer.tetrimmerGUI.TEtrimmerGUI:proof_curation"

# Hatch build configuration
[tool.hatch.build]
source = "src"

# Exclude files and directories from the build
exclude = [
    "environment.yml",
    ".github",
    ".vscode",
]

# Hatch versioning configuration
[tool.hatch.version]
source = "vcs"

# Version control system (VCS) versioning
[tool.hatch.version.vcs]
tag-pattern = "v*"  # Git tags starting with 'v' will be used for versioning
fallback-version = "0.0.0"

# Version file location for VCS
[tool.hatch.build.hooks.vcs]
version-file = "src/TEtrimmer/_version.py"

# Optional dependencies for testing
[project.optional-dependencies]
tests = ["pytest", "pre-commit", "hatch", "ruff", "isort", "numpydoc-validation"]

[tool.ruff]
line-length = 88
lint.select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
lint.ignore = [
    "C901",  # max-complexity-10
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.isort]
profile = "black"
known_third_party = ["click", "Bio"]
known_first_party = ["TEtrimmer"]
default_section = "THIRDPARTY"
force_sort_within_sections = true

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks
    "ES01", # but don't require an extended summary
    "EX01", # or examples
    "SA01", # or a see also section
    "SS06", # and don't require the summary to fit on one line
]
exclude = [  # don't report on checks for these
    '\.__init__$',
    '\.__repr__$',
    '\.__str__$',
]
override_SS05 = [  # allow docstrings to start with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]
